--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ p {font-size: 108%}
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
 										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
-										<i><font color="black">[2020.8] Our SymO<sub>3</sub> paper for out-of-order symbolic execution was accepted to <a href="https://2020.splashcon.org/track/splash-2020-oopsla" style="text-decoration: none;">OOPSLA'20</a>.</font></i>
+										<i><font color="black">[2020.8] Our SymO<sub>3</sub> paper for out-of-order symbolic execution was conditionally accepted to <a href="https://2020.splashcon.org/track/splash-2020-oopsla" style="text-decoration: none;">OOPSLA'20</a>.</font></i>
 									</li>
 									
 									<li class="MsoNormal"
