--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ p {font-size: 108%}
 <!------------------------ me ---------------------------->
 								<h3 style="color: darkblue">About Me</h3>
 								<p class="MsoNormal">
-									I am now an associate researcher in the Department of Computer Science & Technology, Nanjing University.
+									I am now an associate researcher in the Department of Computer Science & Technology, Nanjing University, China.
 									Before joining NJU, I got my PhD from National University of Singapore in 2015, and worked as a postdoc scholar at University of California, Irvine from 2015 to 2017.
 								<!--I was a postdoctoral scholar working with <a href="http://web.cs.ucla.edu/~harryxu/" style="text-decoration: none;">Dr. Harry Xu</a> at University of California. 
 								, under the supervision of <a href="https://www.comp.nus.edu.sg/~khoosc/" style="text-decoration: none;">Dr. Siau-Cheng Khoo</a>. -->
@@ -222,8 +222,8 @@ p {font-size: 108%}
 							
 								<p class="MsoNormal">
 									My research interests span Programming Languages, Software Engineering, and Systems. 
-									<i><strong>I have been recently focusing on building and customizing system software 
-									(e.g., Big Data systems, compilers, runtime environments, and operating systems) for various applications, 
+									<i><strong>I have been recently focusing on building and customizing systems software 
+									(e.g., compilers, runtime environments, Big Data and operating systems) for various applications, 
 									such as program analyses, profiling, security enforcement, and constraint solving.</strong></i> 
 											
 								<!-- 
