--- a/index.html
+++ b/index.html
@@ -181,7 +181,6 @@ p {font-size: 108%}
 								<button class="tablinks" onclick="openCity(event, 'Miscellaneous')">Miscellaneous</button>
 							</div>
 
-
 <!--==================================== Home ====================================-->	
 							<div id="Home" class="tabcontent">
 <!------------------------ me ---------------------------->
@@ -390,6 +389,11 @@ p {font-size: 108%}
 								<ul type="disc">
 								
 								    <h4 style="color: darkblue">2021</h4>
+									<li style="margin-bottom: 10px;"><strong>Identifying Privacy Weaknesses from Multi-Party Trigger-Action Integration Platforms</strong> 
+										<br> by Kulani Tharaka Mahadewa, Yanjun Zhang, Guangdong Bai, Lei Bu, <u>Zhiqiang Zuo</u>, Dileepa Fernando, Zhenkai Liang, Jin Song Dong. 
+										<br> conditionally accepted to <i>the ACM SIGSOFT International Symposium on Software Testing and Analysis</i>, 
+										<a href="https://conf.researchr.org/home/issta-2021">(<font color="#ff0000"><strong>ISSTA'21</strong></font>)</a>,
+										Virtual, July 11-17, 2021. <br></li>
 									
 									<li style="margin-bottom: 10px;"><strong>JPortal: Precise and Efficient Control-Flow Tracing for JVM Programs with Intel Processor Trace</strong> 
 										<br> by <u>Zhiqiang Zuo</u>, Kai Ji, Yifei Wang, Wei Tao, Linzhang Wang, Xuandong Li, and Guoqing Harry Xu. 
