--- a/index.html
+++ b/index.html
@@ -402,13 +402,13 @@ p {font-size: 108%}
 								
 								    <h4 style="color: darkblue">2021</h4>
 									<li style="margin-bottom: 10px;"><strong>Vulnerable Region-Aware Greybox Fuzzing</strong> 
-										<br> by Lingyun Situ, <u>Zhiqiang Zuo</u><img src="email1.png" height="16" width="28" style="vertical-align:middle">, Le Guan, Linzhang Wang, Xuandong Li, Jin Shi, Peng Liu. 
+										<br> by Lingyun Situ, <u>Zhiqiang Zuo</u><img src="email1.png" height="16" width="28" style="vertical-align:middle">, Le Guan, Linzhang Wang, Xuandong Li, Jin Shi, and Peng Liu. 
 										<br> accepted with minor revision to <i>the Journal of Computer Science and Technology</i>, 
 										<a href="http://jcst.ict.ac.cn/EN/1000-9000/home.shtml">(JCST'21)</a>, 
 										2021. <br></li>
 									
 									<li style="margin-bottom: 10px;"><strong>Identifying Privacy Weaknesses from Multi-Party Trigger-Action Integration Platforms</strong> 
-										<br> by Kulani Tharaka Mahadewa, Yanjun Zhang, Guangdong Bai, Lei Bu, <u>Zhiqiang Zuo</u>, Dileepa Fernando, Zhenkai Liang, Jin Song Dong. 
+										<br> by Kulani Tharaka Mahadewa, Yanjun Zhang, Guangdong Bai, Lei Bu, <u>Zhiqiang Zuo</u>, Dileepa Fernando, Zhenkai Liang, and Jin Song Dong. 
 										<br> conditionally accepted to <i>the ACM SIGSOFT International Symposium on Software Testing and Analysis</i>, 
 										<a href="https://conf.researchr.org/home/issta-2021">(<font color="#ff0000"><strong>ISSTA'21</strong></font>)</a>,
 										Virtual, July 11-17, 2021. <br></li>
