--- a/index.html
+++ b/index.html
@@ -1037,7 +1037,7 @@ p {font-size: 108%}
 							
 								<h3 style="color: darkblue">Current Students</h3>
 								<ul type="disc">
-									<li style="margin-bottom: 5px;">Yiyu Zhang (PhD, starting Fall 2019)</li>
+ 									<li style="margin-bottom: 5px;"><a href="https://zyy0721.github.io/">Yiyu Zhang</a> (PhD, starting Fall 2019)</li>
 									<li style="margin-bottom: 5px;">Zewen Sun (PhD, starting Fall 2020)</li>
 									<li style="margin-bottom: 5px;">Xudong Sun (PhD, starting Fall 2021)</li>
 									
