--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@ p {font-size: 108%}
 
 <!--==================================== Research ====================================-->	
 							<div id="Research" class="tabcontent">
-								<h3 style="color: darkblue">Grants</h3>
+								<h3 style="color: darkblue">Grants &amp; Awards</h3>
 								<ul type="disc">
 										<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
