--- a/index.html
+++ b/index.html
@@ -411,7 +411,9 @@ p {font-size: 108%}
 										<br> by <u>Zhiqiang Zuo</u>, Kai Wang, Aftab Hussain, Ardalan Amiri Sani, Yiyu Zhang, Shenming Lu, Wensheng Dou, Linzhang Wang, Xuandong Li, Chenxi Wang, and Guoqing Harry Xu. 
 										<br> accepted to <i>ACM Transactions on Computer Systems</i>, 
 										<a href="https://dl.acm.org/journal/tocs">(<font color="#ff0000"><strong>TOCS'21</strong></font>)</a>,
-										2021. <br></li>
+										2021. 
+										<br>(This is an extended journal version of our ASPLOS'17 paper by adding a GPU-accelerated analysis backend.)
+										</li>
 									
 									<li style="margin-bottom: 10px;"><strong>Vulnerable Region-Aware Greybox Fuzzing</strong> 
 										<br> by Lingyun Situ, <u>Zhiqiang Zuo</u><img src="email1.png" height="16" width="28" style="vertical-align:middle">, Le Guan, Linzhang Wang, Xuandong Li, Jin Shi, and Peng Liu. 
@@ -440,7 +442,9 @@ p {font-size: 108%}
 									<li style="margin-bottom: 10px;"><strong>Towards Efficient Large-Scale Interprocedural Program Static Analysis on Distributed Data-Parallel Computation</strong> 
 										<br> by Rong Gu, <u>Zhiqiang Zuo</u><img src="email1.png" height="16" width="28" style="vertical-align:middle">, Xi Jiang, Han Yin, Zhaokang Wang, Linzhang Wang, Xuandong Li, and Yihua Huang. 
 										<br> In <i>Transactions on Parallel and Distributed Systems</i>, 
-										<a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=71">(<font color="#ff0000"><strong>TPDS'21</strong></font>)</a>, Vol. 32, No. 4, April 2021. <br></li>
+										<a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=71">(<font color="#ff0000"><strong>TPDS'21</strong></font>)</a>, Vol. 32, No. 4, April 2021. 
+										<br>(This is an extended journal version of our IPDPS'19 paper by adding the support for online incremental analysis.)
+										</li>
 									
 									<h4 style="color: darkblue">2020</h4>
 								    <li style="margin-bottom: 10px;"><strong>Incremental Network Configuration Verification</strong> 
@@ -744,7 +748,8 @@ p {font-size: 108%}
 												<a href="">EuroSys'19</a>,
 												<a href="">IPDPS'19</a>,
 												<a href="">TPDS'21</a>,
-												<a href="">PLDI'21-Chianina</a>.
+												<a href="">PLDI'21-Chianina</a>,
+												<a href="">TOCS'21</a>.
 											</li>
 										</ul></li>
 									<br>
