--- a/index.html
+++ b/index.html
@@ -244,6 +244,12 @@ p {font-size: 108%}
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
 										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
+										<i><font color="black">[2021.7] Invited to serve on the program committee (PC) for the 43rd ACM SIGPLAN Conference on Programming Language Design and Implementation <a href="" style="text-decoration: none;">(PLDI'22)</a>.</font></i>
+									</li>
+									
+									<li class="MsoNormal"
+										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
+										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
 										<i><font color="black">[2021.5] A grant is funded from NJU-Huawei Joint Innovation Lab to support our research on low-overhead memory safety enforcement. Thanks Huawei!</font></i>
 									</li>
 									
