--- a/index.html
+++ b/index.html
@@ -241,6 +241,12 @@ p {font-size: 108%}
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
 										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
+										<i><font color="black">[2021.7] Invited to serve on the external review committee (ERC) for the ACM International Conference on Architectural Support for Programming Languages and Operating Systems <a href="https://asplos-conference.org/" style="text-decoration: none;">(ASPLOS'22)</a>.</font></i>
+									</li>
+									
+									<li class="MsoNormal"
+										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
+										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
 										<i><font color="black">[2021.7] Invited to serve on the program committee (PC) for the 43rd ACM SIGPLAN Conference on Programming Language Design and Implementation <a href="" style="text-decoration: none;">(PLDI'22)</a>.</font></i>
 									</li>
 									
