--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ p {font-size: 108%}
 								<button class="tablinks" onclick="openCity(event, 'Publications')">Publications</button>
 								<button class="tablinks" onclick="openCity(event, 'Research')">Research</button>
 								<button class="tablinks" onclick="openCity(event, 'Students')">Students</button>
-								<!--<button class="tablinks" onclick="openCity(event, 'Services')">Services</button>--> 
+								<button class="tablinks" onclick="openCity(event, 'Services')">Services</button>
 								<button class="tablinks" onclick="openCity(event, 'Teaching')">Teaching</button>
 								<button class="tablinks" onclick="openCity(event, 'Calendar')">Calendar</button>
 								<button class="tablinks" onclick="openCity(event, 'Miscellaneous')">Miscellaneous</button>
@@ -1127,14 +1127,30 @@ p {font-size: 108%}
 
 <!--==================================== Services ====================================-->	
 							<div id="Services" class="tabcontent">
-								<h3 style="color: darkblue">Artifact Evaluation Committee</h3>
+								<h3 style="color: darkblue">Conference Committee</h3>
 								<ul type="disc">
-									<li style="margin-bottom: 5px;">2018: OOPSLA</li>
+									<li style="margin-bottom: 5px;">ESEC/FSE'22 PC</li>
+									<li style="margin-bottom: 5px;">ASPLOS'22 ERC</li>
+									<li style="margin-bottom: 5px;">PLDI'22 PC</li>
+									<li style="margin-bottom: 5px;">ISEC'21 PC</li>
+									<li style="margin-bottom: 5px;">ASPLOS'20 ERC</li>
+									<li style="margin-bottom: 5px;">Internetware'20 PC</li>
+									<li style="margin-bottom: 5px;">ISEC'20 PC</li>
+									<li style="margin-bottom: 5px;">OOPSLA'18 AEC</li>
 								</ul>
-								<h3 style="color: darkblue">Reviewer</h3>
+
+								<h3 style="color: darkblue">Journal Reviewer</h3>
 								<ul type="disc">
-									<li style="margin-bottom: 5px;">2017: ASPLOS, ENASE,
-										ISCA-AGP</li>
+									<li style="margin-bottom: 5px;">TSE'20</li>
+									<li style="margin-bottom: 5px;">JCST'20</li>
+									<li style="margin-bottom: 5px;">JOS'20</li>
+								</ul>
+
+								<h3 style="color: darkblue">Conference Reviewer</h3>
+								<ul type="disc">
+									<li style="margin-bottom: 5px;">2020: PLDI</li>
+									<li style="margin-bottom: 5px;">2019: ICFEM, MEMOCODE</li>
+									<li style="margin-bottom: 5px;">2017: ASPLOS, ENASE, ISCA-AGP</li>
 									<li style="margin-bottom: 5px;">2016: ECOOP, ISMM, FSE-SRC</li>
 									<li style="margin-bottom: 5px;">2015: ISSTA</li>
 								</ul>
