--- a/index.html
+++ b/index.html
@@ -434,8 +434,7 @@ p {font-size: 108%}
 									<li style="margin-bottom: 10px;"><strong>Systemizing Interprocedural Static Analysis of Large-Scale Systems Code with Graspan</strong> 
 										<br> by <u>Zhiqiang Zuo</u><img src="email1.png" height="16" width="28" style="vertical-align:middle">, Kai Wang, Aftab Hussain, Ardalan Amiri Sani, Yiyu Zhang, Shenming Lu, Wensheng Dou, Linzhang Wang, Xuandong Li, Chenxi Wang, and Guoqing Harry Xu. 
 										<br> In <i>ACM Transactions on Computer Systems</i>, 
-										<a href="https://dl.acm.org/journal/tocs">(<font color="#ff0000"><strong>TOCS'21</strong></font>)</a>,
-										2021. 
+										<a href="https://dl.acm.org/journal/tocs">(<font color="#ff0000"><strong>TOCS'21</strong></font>)</a>, Vol. 38, No. 4, July 2021. 
 										<br>(This is an extended journal version of our ASPLOS'17 paper by adding a GPU-accelerated analysis backend.)
 										</li>
 									
