--- a/index.html
+++ b/index.html
@@ -1159,9 +1159,9 @@ p {font-size: 108%}
 
 								<h3 style="color: darkblue">Journal Reviewer</h3>
 								<ul type="disc">
-									<li style="margin-bottom: 5px;">TSE'20</li>
-									<li style="margin-bottom: 5px;">JCST'20</li>
-									<li style="margin-bottom: 5px;">JOS'20</li>
+									<li style="margin-bottom: 5px;">TSE</li>
+									<li style="margin-bottom: 5px;">JCST</li>
+									<li style="margin-bottom: 5px;">JOS</li>
 								</ul>
 
 								<h3 style="color: darkblue">Conference Reviewer</h3>
@@ -1179,7 +1179,9 @@ p {font-size: 108%}
 								<!-- <h3 style="color: darkblue">Instructor</h3> -->
 								<h3 style="color: darkblue">Lecturer</h3>
 								<ul type="disc">
-								
+									<li style="margin-bottom: 5px;">NJU 22010100:<strong><em>
+											Advanced Programming in C++ </em></strong> in Semester 1, 2021/2022
+									</li>
 									<li style="margin-bottom: 5px;">NJU 22010100:<strong><em>
 											Advanced Programming in C++ </em></strong> in Semester 2, 2020/2021
 									</li>
