--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ p {font-size: 108%}
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
 										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
-										<i><font color="black">[2021.7] Invited to serve on the program committee (PC) for the 43rd ACM SIGPLAN Conference on Programming Language Design and Implementation <a href="" style="text-decoration: none;">(PLDI'22)</a>.</font></i>
+										<i><font color="black">[2021.7] Invited to serve on the program committee (PC) for the 43rd ACM SIGPLAN Conference on Programming Language Design and Implementation <a href="https://pldi22.sigplan.org/" style="text-decoration: none;">(PLDI'22)</a>.</font></i>
 									</li>
 									
 									<li class="MsoNormal"
