--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ p {font-size: 108%}
 									<li style="margin-bottom: 10px;"><strong>Vulnerable Region-Aware Greybox Fuzzing</strong> 
 										<br> by Lingyun Situ, <u>Zhiqiang Zuo</u><img src="email1.png" height="16" width="28" style="vertical-align:middle">, Le Guan, Linzhang Wang, Xuandong Li, Jin Shi, and Peng Liu. 
 										<br> In <i>the Journal of Computer Science and Technology</i>, 
-										<a href="http://jcst.ict.ac.cn/EN/1000-9000/home.shtml">(JCST'21)</a>, Vol. 36, Issue (5), 2021. <br>
+										<a href="http://jcst.ict.ac.cn/EN/1000-9000/home.shtml">(JCST'21)</a>, Vol. 36, No. 5, 2021. <br>
 										</li>
 									
 									<li style="margin-bottom: 10px;"><strong>Identifying Privacy Weaknesses from Multi-Party Trigger-Action Integration Platforms</strong> 
