--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ p {font-size: 108%}
 								<ul type="disc">
 								    <h4 style="color: darkblue">2022</h4>
 									
-									<li style="margin-bottom: 10px;"><strong>基于核外计算的Datalog引擎设计与实现</strong> 
+									<li style="margin-bottom: 10px;"><strong>基于核外计算的Datalog引擎设计与实现(In Chinese)</strong> 
 										<br> by Yiyu Zhang, Guihang Wang, <u>Zhiqiang Zuo</u><img src="email1.png" height="16" width="28" style="vertical-align:middle">, Xuandong Li. 
 										<br> In <i>Journal of Software</i>, <a href="http://jos.org.cn/jos/article/abstract/6552?bsh_bid=5671493350">(软件学报)</a>, online, January 2022. <br>
 										</li>	
