--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ p {font-size: 108%}
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
 										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
-										<i><font color="black">[2022.2] Invited to serve on the program committee (PC) of the ACM SIGOPS Asia-Pacific Workshop on Systems <a href="https://ap-sys.org/" style="text-decoration: none;">(APSys'22)</a>.</font></i>
+										<i><font color="black">[2022.2] Invited to serve on the program committee (PC) of the ACM SIGOPS Asia-Pacific Workshop on Systems <a href="https://apsys2022.comp.nus.edu.sg/" style="text-decoration: none;">(APSys'22)</a>.</font></i>
 									</li>
 
 									<li class="MsoNormal"
