--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@ p {font-size: 108%}
 										Chicago, Illinois, USA, November 5-6, 2020. <br></li>
 								    
 								    <li style="margin-bottom: 10px;"><strong>Exposing Cache Timing Side-Channel Leaks through Out-of-Order Symbolic Execution</strong> 
-										<br> by Shengjian Guo, Yueqi Chen, Jiyong Yu, Meng Wu, <u>Zhiqiang Zuo</u>, Peng Li and Yueqiang Cheng. 
+										<br> by Shengjian Guo, Yueqi Chen, Jiyong Yu, Meng Wu, <u>Zhiqiang Zuo</u>, Peng Li, Yueqiang Cheng and Huibo Wang. 
 										<br> In <i>Proceedings of the ACM SIGPLAN Conference on Object-Oriented Programming Systems, Languages, and Applications</i>, 
 										<a href="https://2020.splashcon.org/track/splash-2020-oopsla">(<font color="#ff0000"><strong>OOPSLA'20</strong></font>)</a>,
 										Illinois, United States, November 15-20, 2020. <br></li>
