--- a/index.html
+++ b/index.html
@@ -1016,6 +1016,9 @@ p {font-size: 108%}
 								<h3 style="color: darkblue">Lecturer</h3>
 								<ul type="disc">
 									<li style="margin-bottom: 5px;">NJU 22010100:<strong><em>
+											Advanced Programming in C++ </em></strong> in Semester 2, 2021/2022
+									</li>
+									<li style="margin-bottom: 5px;">NJU 22010100:<strong><em>
 											Advanced Programming in C++ </em></strong> in Semester 1, 2021/2022
 									</li>
 									<li style="margin-bottom: 5px;">NJU 22010100:<strong><em>
