--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ p {font-size: 108%}
 									
 									<li style="margin-bottom: 10px;"><strong>UPGRADVISOR: Early Adopting Dependency Updates Using Production Traces</strong> 
 										<br> by Yaniv David, Xudong Sun, Aditya Senthilnathan, Raphael Jedidiah Sofaer, Junfeng Yang, <u>Zhiqiang Zuo</u><img src="email1.png" height="16" width="28" style="vertical-align:middle">, Guoqing Harry Xu, Jason Nieh, and Ronghui Gu. 
-										<br> accepted by <i>16th USENIX Symposium on Operating Systems Design and Implementation</i>, 
+										<br> accepted by <i> USENIX Symposium on Operating Systems Design and Implementation</i>, 
 										<a href="https://www.usenix.org/conference/osdi22">(<font color="#ff0000"><strong>OSDI'22</strong></font>)</a>,
 										Carlsbad, CA, USA, July 11-13, 2022. <br>
 										</li>
