--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ p {font-size: 108%}
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
 										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
-										<i><font color="black">[2022.3] Upgradivor was accepted to <a href="https://www.usenix.org/conference/osdi22" style="text-decoration: none;">OSDI'22</a>.</font></i>
+										<i><font color="black">[2022.3] Upgradvisor was accepted to <a href="https://www.usenix.org/conference/osdi22" style="text-decoration: none;">OSDI'22</a>.</font></i>
 									</li>
 									
 									<li class="MsoNormal"
