--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,7 @@ p {font-size: 108%}
 										<td width="23%"
 											style="width: 23.74%; padding: .75pt .75pt .75pt .75pt"
 											align="right">
-											<div id="clustrmaps-widget"></div> <a href='https://clustrmaps.com/site/17e3l'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=080808&w=300&t=tt&d=gVXCGJo41tXWbFJHdmI574i_AsrN1PWKXm1VIpVJI6E&co=ffffff&ct=808080'/></a>
+											<div id="clustrmaps-widget"></div> <a href='https://clustrmaps.com/site/17e3l'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=240&t=tt&d=gVXCGJo41tXWbFJHdmI574i_AsrN1PWKXm1VIpVJI6E&co=2d78ad&ct=ffffff'/></a>
 										</td>
 									</tr>
 								</tbody>
