--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ p {font-size: 108%}
 									My research interests span Programming Languages, Software Engineering, and Systems. 
 									<i><strong>I have been recently focusing on building and customizing systems software 
 									(e.g., compilers, runtime environments, Big Data and operating systems) for various applications, 
-									such as program analyses, profiling, security enforcement, and SAT/SMT solving.</strong></i> 
+									such as program analyses, profiling, and security enforcement.</strong></i> 
 											
 								<!-- 
 								I am recently focusing on building Big Data supports for scalable program analysis, synthesis and SAT solving. 
