--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ p {font-size: 108%}
 										
 									<h4 style="color: darkblue">2019</h4>	
 									<li style="margin-bottom: 10px;"><strong>Automatic Self-Validation for Code Coverage Profilers</strong> 
-										 <br> by Yibiao Yang, Yanyan Jiang, <strong>Zhiqiang Zuo</strong>, Yang Wang, Hao Sun, Hongmin Lu, Yuming Zhou, and Baowen Xu.
+										 <br> by Yibiao Yang, Yanyan Jiang, <strong>Zhiqiang Zuo</strong>, Yang Wang, Hao Sun, Hongmin Lu, Yuming Zhou*, and Baowen Xu*.
 										 <br> In <i>Proceedings of the 34th IEEE/ACM International Conference on Automated Software Engineering</i>, <a href="https://2019.ase-conferences.org/">(<font color="#ff0000"><strong>ASE'19</strong></font>)</a>,
 										San Diego, CA, USA, November 11-15, 2019. <br></li>
 									<li style="margin-bottom: 10px;"><strong>BigSpa: An Efficient Interprocedural Static Analysis Engine in the Cloud</strong> 
@@ -555,7 +555,7 @@ p {font-size: 108%}
 										 <br> In <i>Journal of Software</i>, <a href="http://www.jos.org.cn">(软件学报)</a>,
 										Vol. 30, No. 5, May 2019. <br></li>
 									<li style="margin-bottom: 10px;"><strong>Hunting for Bugs in Code Coverage Tools via Randomized Differential Testing</strong> 
-										 <br> by Yibiao Yang, Yuming Zhou, Hao Sun, Zhendong Su, <strong>Zhiqiang Zuo</strong>, Lei Xu, and Baowen Xu.
+										 <br> by Yibiao Yang, Yuming Zhou*, Hao Sun, Zhendong Su, <strong>Zhiqiang Zuo</strong>, Lei Xu, and Baowen Xu*.
 										 <br> In <i>Proceedings of the 41st International Conference on Software Engineering</i>, <a
 										href="https://2019.icse-conferences.org/home">(<font color="#ff0000"><strong>ICSE'19</strong></font>)</a>,
 										Montréal, QC, Canada, May 25–31, 2019. <br></li>
