--- a/index.html
+++ b/index.html
@@ -256,6 +256,12 @@ p {font-size: 108%}
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
 										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
+										<i><font color="black">[2022.5] Our journal paper on statistical debugging was accepted to <a href="https://dl.acm.org/journal/tosem" style="text-decoration: none;">TOSEM</a>.</font></i>
+									</li>
+
+									<li class="MsoNormal"
+										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
+										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
 										<i><font color="black">[2022.3] Upgradvisor was accepted to <a href="https://www.usenix.org/conference/osdi22" style="text-decoration: none;">OSDI'22</a>.</font></i>
 									</li>
 									
@@ -462,9 +468,16 @@ p {font-size: 108%}
 								<ul type="disc">
 								    <h4 style="color: darkblue">2022</h4>
 									
+									<li style="margin-bottom: 10px;"><strong>Toward More Efficient Statistical Debugging with Abstraction Refinement</strong> 
+										<br> by <strong>Zhiqiang Zuo</strong>*, Xintao Niu*, Siyi Zhang, Lu Fang, Siau Cheng Khoo, Shan Lu, Chengnian Sun, and Guoqing Harry Xu. 
+										<br> accepted by <i>ACM Transactions on Software Engineering and Methodology</i>, 
+										<a href="https://dl.acm.org/journal/tosem">(<font color="#ff0000"><strong>TOSEM'22</strong></font>)</a>, 2022. 
+										<br>(This is an extended journal version of our ISSTA'14 and OOPSLA'16 papers under a unified and systematic formulation.)
+										</li>
+
 									<li style="margin-bottom: 10px;"><strong>UPGRADVISOR: Early Adopting Dependency Updates Using Production Traces</strong> 
 										<br> by Yaniv David, <u>Xudong Sun</u>, Aditya Senthilnathan, Raphael Jedidiah Sofaer, Junfeng Yang*, <strong>Zhiqiang Zuo</strong>*, Guoqing Harry Xu, Jason Nieh, and Ronghui Gu. 
-										<br> accepted by <i> USENIX Symposium on Operating Systems Design and Implementation</i>, 
+										<br> accepted by <i>USENIX Symposium on Operating Systems Design and Implementation</i>, 
 										<a href="https://www.usenix.org/conference/osdi22">(<font color="#ff0000"><strong>OSDI'22</strong></font>)</a>,
 										Carlsbad, CA, USA, July 11-13, 2022. <br>
 										</li>
