--- a/index.html
+++ b/index.html
@@ -257,6 +257,12 @@ p {font-size: 108%}
 								<div class="scroll">
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
+										&bull;	
+										<i><font color="black">[2022.9] A grant (general program) is funded from <a href="http://www.nsfc.gov.cn/" style="text-decoration: none;">NSFC</a>.</font></i>
+									</li>
+									
+									<li class="MsoNormal"
+										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
 										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
 										<i><font color="black">[2022.5] Our journal paper on statistical debugging was accepted to <a href="https://dl.acm.org/journal/tosem" style="text-decoration: none;">TOSEM</a>.</font></i>
 									</li>
@@ -712,6 +718,10 @@ p {font-size: 108%}
 							<div id="Research" class="tabcontent">
 								<h3 style="color: darkblue">Grants &amp; Awards</h3>
 								<ul type="disc">
+										<li class="MsoNormal"
+										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
+										PI, National Natural Science Foundation of China [General Program], 2023.1-2026.12, (软硬件协同的程序动态执行信息跟踪技术研究)</li>
+									
 										<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
 										ZiJin Scholar of Nanjing University (南京大学"紫金学者"), 2022</li>
