--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ p {font-size: 108%}
 								<div class="scroll">
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
-										&bull;	
+										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
 										<i><font color="black">[2022.9] A grant (general program) is funded from <a href="http://www.nsfc.gov.cn/" style="text-decoration: none;">NSFC</a>.</font></i>
 									</li>
 									
