--- a/index.html
+++ b/index.html
@@ -258,6 +258,12 @@ p {font-size: 108%}
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
 										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
+										<i><font color="black">[2022.9] Invited to serve on the program committee (PC) of the ACM Student Research Competition (SRC) at ICSE 2023 <a href="https://conf.researchr.org/track/icse-2023/icse-2023-SRC" style="text-decoration: none;">(ICSE'23 SRC)</a>.</font></i>
+									</li>
+									
+									<li class="MsoNormal"
+										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
+										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
 										<i><font color="black">[2022.9] A grant (general program) is funded from <a href="http://www.nsfc.gov.cn/" style="text-decoration: none;">NSFC</a>.</font></i>
 									</li>
 									
