--- a/index.html
+++ b/index.html
@@ -872,6 +872,7 @@ p {font-size: 108%}
 								<ul type="disc">
 								
 										<li style="margin-bottom: 10px;"><strong>基于硬件的程序动态控制流追踪系统</strong> <br>
+										<i>2022 Huawei STW</i>, Shenzhen, 2020.9.26-9.28. <br>
 										<i>南方科技大学</i>, 线上, 2022.4.7. 
 										<br>
 										</li>
@@ -889,6 +890,8 @@ p {font-size: 108%}
 										</li>
 										
 										<li style="margin-bottom: 10px;"><strong>Systemized Program Analysis（系统化程序分析）</strong> <br>
+										<i>2022 网络安全技术论坛</i>, 华为西安研究所, 2022.9.19-9.20. 
+										<br>
 										<i>清华大学</i>, 线上, 2022.3.11. 
 										<br>
 										<i>CCF形式化方法专委战略研讨会：软硬件验证工具、研究进展与挑战</i>, 线上, 2021.10.24. 
