--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ p {font-size: 108%}
 											</h2>
 											
 											<p class="MsoNormal">
-												Assistant Professor | Associate Researcher <br>
+												Associate Professor (with tenure) <br>
 												<!--	Advisor: <a href="http://www.ics.uci.edu/~guoqingx/">Harry Xu</a> -->
 												<a href="http://seg.nju.edu.cn/index.action">Software Engineering Group</a>
 												<br>
@@ -186,7 +186,7 @@ p {font-size: 108%}
 <!------------------------ me ---------------------------->
 								<h3 style="color: darkblue">About Me</h3>
 								<p class="MsoNormal">
-									I am now an associate researcher in the Department of Computer Science & Technology, Nanjing University, China.
+									I am now a tenured associate professor in the Department of Computer Science & Technology, Nanjing University, China.
 									Before joining NJU, I got my PhD from National University of Singapore in 2015, and worked as a postdoc scholar at University of California, Irvine from 2015 to 2017.
 								<!--I was a postdoctoral scholar working with <a href="http://web.cs.ucla.edu/~harryxu/" style="text-decoration: none;">Dr. Harry Xu</a> at University of California. 
 								, under the supervision of <a href="https://www.comp.nus.edu.sg/~khoosc/" style="text-decoration: none;">Dr. Siau-Cheng Khoo</a>. -->
