--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ p {font-size: 108%}
 
 									<li style="margin-bottom: 10px;"><strong>UPGRADVISOR: Early Adopting Dependency Updates Using Production Traces</strong> 
 										<br> by Yaniv David, <u>Xudong Sun</u>, Aditya Senthilnathan, Raphael Jedidiah Sofaer, Junfeng Yang*, <strong>Zhiqiang Zuo</strong>*, Guoqing Harry Xu, Jason Nieh, and Ronghui Gu. 
-										<br> accepted by <i>USENIX Symposium on Operating Systems Design and Implementation</i>, 
+										<br> In <i>Proceedings of USENIX Symposium on Operating System Design and Implementation</i>, 
 										<a href="https://www.usenix.org/conference/osdi22">(<font color="#ff0000"><strong>OSDI'22</strong></font>)</a>,
 										Carlsbad, CA, USA, July 11-13, 2022. <br>
 										</li>
