--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@ p {font-size: 108%}
 											<p class="MsoNormal">
 												Associate Professor (with tenure) <br>
 												<!--	Advisor: <a href="http://www.ics.uci.edu/~guoqingx/">Harry Xu</a> -->
-												<a href="http://seg.nju.edu.cn/index.action">Software Engineering Group</a>
-												<br>
+												<!--<a href="http://seg.nju.edu.cn/index.action">Software Engineering Group</a> <br> -->
 												<a href="http://cs.nju.edu.cn/">Department of Computer Science and Technology</a>
 												<br> 
 												<a href="https://www.nju.edu.cn/">Nanjing University, China</a><br>
@@ -135,8 +134,8 @@ p {font-size: 108%}
 											<p class="MsoNormal">
 												<span style="mso-no-proof: yes"></span>
 											</p>
-											<img alt="NJU" border="0" height="200" src="tagcloud-compressed.png"
-													width="255">
+											<!--<img alt="NJU" border="0" height="200" src="tagcloud-compressed.png"
+													width="255">-->
 											<div style="display: inline; margin: 5px 10px; float: center">
 												
 											</div>
@@ -158,8 +157,8 @@ p {font-size: 108%}
 											<p class="MsoNormal">
 												<span style="mso-no-proof: yes"></span>
 											</p>
-											<img alt="Zhiqiang Zuo" border="0" height="240" src="zuo3-compressed.jpg"
-													width="182">
+											<img alt="Zhiqiang Zuo" border="0" height="210" src="zuo3-compressed.jpg"
+													width="170">
 											<div style="display: inline; margin: 5px 10px; float: center">
 												
 											</div>
