--- a/index.html
+++ b/index.html
@@ -1039,6 +1039,7 @@ p {font-size: 108%}
 							<div id="Services" class="tabcontent">
 								<h3 style="color: darkblue">Conference Committee</h3>
 								<ul type="disc">
+									<li style="margin-bottom: 5px;">ICSE'23 SRC PC</li>
 									<li style="margin-bottom: 5px;">Internetware'22 PC</li>
 									<li style="margin-bottom: 5px;">APSys'22 PC</li>
 									<li style="margin-bottom: 5px;">ESEC/FSE'22 PC</li>
@@ -1073,6 +1074,9 @@ p {font-size: 108%}
 								<!-- <h3 style="color: darkblue">Instructor</h3> -->
 								<h3 style="color: darkblue">Lecturer</h3>
 								<ul type="disc">
+									<li style="margin-bottom: 5px;">NJU 22010100:<strong><em>
+											Advanced Programming in C++ </em></strong> in Semester 2, 2022/2023
+									</li>
 									<li style="margin-bottom: 5px;">NJU 22010100:<strong><em>
 											Advanced Programming in C++ </em></strong> in Semester 1, 2022/2023
 									</li>
