--- a/index.html
+++ b/index.html
@@ -1039,6 +1039,7 @@ p {font-size: 108%}
 							<div id="Services" class="tabcontent">
 								<h3 style="color: darkblue">Conference Committee</h3>
 								<ul type="disc">
+									<li style="margin-bottom: 5px;">ChinaSys'22 PC</li>
 									<li style="margin-bottom: 5px;">ICSE'23 SRC PC</li>
 									<li style="margin-bottom: 5px;">Internetware'22 PC</li>
 									<li style="margin-bottom: 5px;">APSys'22 PC</li>
