--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@ p {font-size: 108%}
 								    <h4 style="color: darkblue">2023</h4>
 									
 									<li style="margin-bottom: 10px;"><strong>DStream: A Streaming-Based Highly Parallel IFDS Framework</strong> 
-										<br> by Xizao Wang, <strong>Zhiqiang Zuo</strong>*, Lei Bu*, Jianhua Zhao. 
+										<br> by <u>Xizao Wang</u>, <strong>Zhiqiang Zuo</strong>*, Lei Bu*, Jianhua Zhao. 
 										<br> accepted by <i>IEEE/ACM International Conference on Software Engineering</i>, 
 										<a href="https://conf.researchr.org/home/icse-2023">(<font color="#ff0000"><strong>ICSE'23</strong></font>)</a>, 2023. 
 										<br>
