--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ p {font-size: 108%}
 								
 								<p class="MsoNormal">
 								<i><font color="red"><strong>I am recruiting PhD, Master and Undergraduate students. If interested, please feel free to drop me an email.
-								<br />现招收博士、硕士以及南京大学本科生，对系统软件、编译器、程序分析感兴趣的同学，请务必通过邮件（附简历和成绩单）取得联系。</strong></font></i>
+								<br />现招收博士、硕士以及南京大学本科生，对系统软件、编译器、程序分析感兴趣的同学，请通过邮件（附简历和成绩单）取得联系。</strong></font></i>
 								</p>
 								
 								<!--
@@ -1065,6 +1065,7 @@ p {font-size: 108%}
 							<div id="Services" class="tabcontent">
 								<h3 style="color: darkblue">Conference Committee</h3>
 								<ul type="disc">
+									<li style="margin-bottom: 5px;">Internetware'23 PC</li>
 									<li style="margin-bottom: 5px;">ICSE'23 SRC PC</li>
 									<li style="margin-bottom: 5px;">ChinaSys'22 PC</li>
 									<li style="margin-bottom: 5px;">ChinaSoft'22 PC</li>
