--- a/index.html
+++ b/index.html
@@ -1156,8 +1156,7 @@ p {font-size: 108%}
 								<ul type="disc">
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in"><a
-										href="http://confsearch.ethz.ch/confsearch/"> Confsearch
-											Link</a></li>
+										href="https://ccfddl.github.io/"> CCF Conference Deadlines</a></li>
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in"><a
 										href="https://www.ccf.org.cn/Academic_Evaluation/By_category/">
