--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@ p {font-size: 108%}
 										<br>(This is an extended journal version of our ISSTA'14 and OOPSLA'16 papers under a unified and systematic formulation.)
 										</li>
 
-									<li style="margin-bottom: 10px;"><strong>UPGRADVISOR: Early Adopting Dependency Updates Using Production Traces</strong> 
+									<li style="margin-bottom: 10px;"><strong>UPGRADVISOR: Early Adopting Dependency Updates Using Hybrid Program Analysis and Hardware Tracing</strong> 
 										<br> by Yaniv David, <u>Xudong Sun</u>, Aditya Senthilnathan, Raphael Jedidiah Sofaer, Junfeng Yang*, <strong>Zhiqiang Zuo</strong>*, Guoqing Harry Xu, Jason Nieh, and Ronghui Gu. 
 										<br> In <i>Proceedings of USENIX Symposium on Operating System Design and Implementation</i>, 
 										<a href="https://www.usenix.org/conference/osdi22">(<font color="#ff0000"><strong>OSDI'22</strong></font>)</a>,
