--- a/index.html
+++ b/index.html
@@ -1033,6 +1033,9 @@ p {font-size: 108%}
 									<li style="margin-bottom: 5px;">Peng Zhou (Master, starting Fall 2022)</li>
 									<li style="margin-bottom: 5px;">Yueyang Wang (Master, starting Fall 2022)</li>
 									<li style="margin-bottom: 5px;">Yi Li (Master, starting Fall 2022)</li>
+									
+									<li style="margin-bottom: 5px;">Yanfeng Gao (Master, starting Fall 2023)</li>
+									<li style="margin-bottom: 5px;">Xuyun Cai (Master, starting Fall 2023)</li>
 									<br>
 									
 
