--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@ p {font-size: 108%}
 											
 											<p class="MsoNormal">
 												Associate Professor (with tenure) <br>
+												Co-Appointed Research Professor <br>
 												<!--	Advisor: <a href="http://www.ics.uci.edu/~guoqingx/">Harry Xu</a> -->
 												<!--<a href="http://seg.nju.edu.cn/index.action">Software Engineering Group</a> <br> -->
 												<a href="http://cs.nju.edu.cn/">Department of Computer Science and Technology</a>
@@ -157,7 +158,7 @@ p {font-size: 108%}
 											<p class="MsoNormal">
 												<span style="mso-no-proof: yes"></span>
 											</p>
-											<img alt="Zhiqiang Zuo" border="0" height="210" src="zuo3-compressed.jpg"
+											<img alt="Zhiqiang Zuo" border="0" height="220" src="zuo3-compressed.jpg"
 													width="170">
 											<div style="display: inline; margin: 5px 10px; float: center">
 												
