--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ p {font-size: 108%}
 <!------------------------ me ---------------------------->
 								<h3 style="color: darkblue">About Me</h3>
 								<p class="MsoNormal">
-									I am now an associate professor (and Ph.D advisor) in the Department of Computer Science & Technology, Nanjing University, China.
+									I am now an associate professor and Ph.D advisor in the Department of Computer Science & Technology, Nanjing University, China.
 									Before joining NJU, I got my PhD from National University of Singapore in 2015, and worked as a postdoc scholar at University of California, Irvine from 2015 to 2017.
 								<!--I was a postdoctoral scholar working with <a href="http://web.cs.ucla.edu/~harryxu/" style="text-decoration: none;">Dr. Harry Xu</a> at University of California. 
 								, under the supervision of <a href="https://www.comp.nus.edu.sg/~khoosc/" style="text-decoration: none;">Dr. Siau-Cheng Khoo</a>. -->
@@ -238,9 +238,7 @@ p {font-size: 108%}
 							
 								<p class="MsoNormal">
 									My research interests span Programming Languages, Software Engineering, and Systems. 
-									<i><strong>I have been recently focusing on building and customizing systems software 
-									(e.g., compilers, runtime environments, Big Data and operating systems) for various applications, 
-									such as program analyses, profiling, and security enforcement.</strong></i> 
+									<i><strong>I have been recently focusing on building and customizing systems software, such as compilers, runtime environments, Big Data and operating systems for program optimization, reliability, and safety enforcement.</strong></i> 
 											
 								<!-- 
 								I am recently focusing on building Big Data supports for scalable program analysis, synthesis and SAT solving. 
@@ -867,7 +865,7 @@ p {font-size: 108%}
 											<li>Paper: accepted to <a href="https://dl.acm.org/citation.cfm?id=2631833">ISSTA'14
 													DS</a>, <a href="https://dl.acm.org/citation.cfm?id=2610400">ISSTA'14</a>,
 												<a href="https://dl.acm.org/citation.cfm?id=2984005">OOPSLA'16</a>,
-												<a href="">TOSEM'22</a>.
+												<a href="https://dl.acm.org/doi/10.1145/3544790">TOSEM'23</a>.
 											</li>
 										</ul></li>
 									<br>
