--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ div.tab button {
 	padding: 14px 16px;
 	transition: 0.3s;
 	font-size: 120%;
-	font-family:Cambria,KaiTi,sans-serif;
+	font-family:Cambria,Microsoft YaHei,sans-serif;
 	tab-interval: .5in";
 }
 
@@ -186,11 +186,15 @@ p {font-size: 108%}
 <!------------------------ me ---------------------------->
 								<h3 style="color: darkblue">About Me</h3>
 								<p class="MsoNormal">
-									I am now an associate professor and Ph.D advisor in the Department of Computer Science & Technology, Nanjing University, China.
+									I am now an associate professor in the Department of Computer Science & Technology, Nanjing University, China.
 									Before joining NJU, I got my PhD from National University of Singapore in 2015, and worked as a postdoc scholar at University of California, Irvine from 2015 to 2017.
 								<!--I was a postdoctoral scholar working with <a href="http://web.cs.ucla.edu/~harryxu/" style="text-decoration: none;">Dr. Harry Xu</a> at University of California. 
 								, under the supervision of <a href="https://www.comp.nus.edu.sg/~khoosc/" style="text-decoration: none;">Dr. Siau-Cheng Khoo</a>. -->
 								<!--	Here is my brief <a href="https://drive.google.com/file/d/1FtSX5MjQpKtkzDRCvZafUeKd7xfEwOtf/view?usp=sharing" style="text-decoration: underline">CV</a>. -->
+								</p>
+								
+								<p style="font-family:Microsoft YaHei">
+								中文简介：左志强，新体制长聘副教授（特聘研究员），博士生导师。2015年毕业于新加坡国立大学，获博士学位。2015年至2017年于美国加州大学从事博士后工作。主要研究方向为系统软件、编译器、程序分析等。
 								</p>
 
 								
