--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@ p {font-size: 108%}
 								<!--	Here is my brief <a href="https://drive.google.com/file/d/1FtSX5MjQpKtkzDRCvZafUeKd7xfEwOtf/view?usp=sharing" style="text-decoration: underline">CV</a>. -->
 								</p>
 								
-								<p style="font-family:Microsoft YaHei">
+								<p><strong>
 								中文简介：左志强，新体制长聘副教授（特聘研究员），博士生导师。2015年于新加坡国立大学获博士学位。2015年至2017年于美国加州大学从事博士后工作。主要研究方向为系统软件、编译器、程序分析等。
-								</p>
+								</strong></p>
 
 								
 								<p class="MsoNormal">
