--- a/index.html
+++ b/index.html
@@ -1098,7 +1098,8 @@ p {font-size: 108%}
 								<h3 style="color: darkblue">Conference Committee</h3>
 								<ul type="disc">
 									<li style="margin-bottom: 5px;">ASE'23 PC</li>
-									<li style="margin-bottom: 5px;">Chinasys'23 PC</li>
+									<li style="margin-bottom: 5px;">ChinaSys'23 PC</li>
+									<li style="margin-bottom: 5px;">ChinaSoft'23 PC</li>
 									<li style="margin-bottom: 5px;">Internetware'23 PC</li>
 									<li style="margin-bottom: 5px;">ICSE'23 SRC PC</li>
 									<li style="margin-bottom: 5px;">ChinaSys'22 PC</li>
