--- a/index.html
+++ b/index.html
@@ -300,19 +300,19 @@ p {font-size: 108%}
 									
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
-										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
+										&bull;	
 										<i><font color="black">[2022.5] Our journal paper on statistical debugging was accepted to <a href="https://dl.acm.org/journal/tosem" style="text-decoration: none;">TOSEM</a>.</font></i>
 									</li>
 
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
-										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
+										&bull;	
 										<i><font color="black">[2022.3] Upgradvisor was accepted to <a href="https://www.usenix.org/conference/osdi22" style="text-decoration: none;">OSDI'22</a>.</font></i>
 									</li>
 									
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
-										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
+										&bull;	
 										<i><font color="black">[2022.2] Invited to serve on the program committee (PC) of the ACM SIGOPS Asia-Pacific Workshop on Systems <a href="https://apsys2022.comp.nus.edu.sg/" style="text-decoration: none;">(APSys'22)</a>.</font></i>
 									</li>
 
