--- a/index.html
+++ b/index.html
@@ -260,6 +260,11 @@ p {font-size: 108%}
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
 										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
+										<i><font color="black">[2023.6] Invited to serve on the program committee (PC) of the ACM International Conference on the Foundations of Software Engineering <a href="https://conf.researchr.org/home/fse-2024" style="text-decoration: none;">(FSE'24)</a>.</font></i>
+									</li>	
+										<li class="MsoNormal"
+										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
+										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
 										<i><font color="black">[2023.5] Invited to serve on the program committee (PC) of the IEEE/ACM International Conference on Automated Software Engineering <a href="https://conf.researchr.org/home/ase-2023" style="text-decoration: none;">(ASE'23)</a>.</font></i>
 									</li>
 									
